sample/error/module_prohibited-import-submodule.bfr
// web playground では変なパスへのimportを禁止する

open import "std.bfr" // 可能

module Sub = struct
  open import "../lib/std.bfr" // 禁止
end

codegen []